# nemu

./: Cargo.toml  README.md
crates/nemu-bin/: Cargo.toml  app.rs  config.rs  desktop_entry.rs  emoji.rs  main.rs  mode.rs  style.css
crates/nemu-bin/modes/: app_launcher.rs  calculator.rs  dmenu.rs  emojis.rs  help.rs  mod.rs
