[workspace]
resolver = "3"
members = ["crates/nemu-bin"]
default-members = ["crates/nemu-bin"]

[workspace.dependencies]
relm4 = "0.11.0"
relm4-components = "0.11.0"
gtk4 = { version = "0.11.0", features = ["v4_12"] }
gtk4-layer-shell = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
freedesktop-desktop-entry = "0.8.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
fuzzy-matcher = "0.3.7"
freedesktop-icons = "0.4.0"
emojis = "0.9.0"
