[package]
name = "nemu-bin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nemu"
path = "main.rs"

[dependencies]
relm4.workspace = true
relm4-components.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
serde.workspace = true
freedesktop-desktop-entry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fuzzy-matcher.workspace = true
freedesktop-icons.workspace = true
emojis.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
toml_edit = { version = "0.25.13", features = ["serde"] }
toml = "1.1.3"
gio-unix = "0.22"
